Use SFML for drawing graphics
Add a wrapper around the J2ME graphics functionality using SFML for
drawing.

This only implements what is needed for this game but hopefully wraps
that mostly correctly although some fairly nasty hacks are required
because of the different APIs.

Removed use of threads since that is completely unnecessary and can
only introduce very hard to fix issues.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ include(cmake/PreventInSourceBuilds.cmake)
 include(cmake/CompilerWarnings.cmake)
 include(cmake/StaticAnalyzers.cmake)
 include(cmake/Sanitizers.cmake)
+include(FetchContent)
 
 add_library(project_options INTERFACE)
 add_library(project_warnings INTERFACE)
@@ -24,15 +25,23 @@ endif()
 set_project_warnings(project_warnings)
 enable_sanitizers(project_options)
 
+FetchContent_Declare(SFML
+  GIT_REPOSITORY https://github.com/SFML/SFML.git
+  GIT_TAG 2.6.x
+)
+FetchContent_MakeAvailable(SFML)
+
 add_executable(kaper
-  src/GameStateSailingCity.cpp
-  src/GameStateBoard.cpp
-  src/Kaper.cpp
-  src/StateGame.cpp
-  src/GameStateCity.cpp
-  src/StateMenu.cpp
-  src/KaperCanvas.cpp
   src/GameStateAttack.cpp
+  src/GameStateBoard.cpp
+  src/GameStateCity.cpp
+  src/GameStateSailingCity.cpp
+  src/Graphics.cpp
+  src/Image.cpp
+  src/Kaper.cpp
+  src/KaperCanvas.cpp
+  src/StateGame.cpp
+  src/StateMenu.cpp
 )
 
 target_include_directories(kaper PRIVATE
@@ -40,6 +49,7 @@ target_include_directories(kaper PRIVATE
 )
 
 target_link_libraries(kaper PRIVATE
+  sfml-graphics
   project_options
   project_warnings
 )
