Implement font drawing
Add support for using fonts instead of bitmap for drawing text. This
looks much, much nicer.

Use the Skranji Font for the actual font which seems to fit pretty
well into the games theme and is distributed under Open Font License
which should be compatible with the GPL used by this game.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ FetchContent_Declare(SFML
 FetchContent_MakeAvailable(SFML)
 
 add_executable(kaper
+  src/Font.cpp
   src/GameStateAttack.cpp
   src/GameStateBoard.cpp
   src/GameStateCity.cpp
