Implement Random class
Make the random class actually return random integers so the game is
much closer to being playable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ add_executable(kaper
   src/Image.cpp
   src/Kaper.cpp
   src/KaperCanvas.cpp
+  src/Random.cpp
   src/StateGame.cpp
   src/StateMenu.cpp
 )
