Add option for warnings as errors
Add the option for setting warnings as errors as an argument to the
CMake function for creating the interface with the warnings to avoid
conflicting with the same global option used by the SFML library.

Set warnings as errors to true by default for this project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,8 @@ if(WIN32)
   )
 endif()
 
-set_project_warnings(project_warnings)
+option(KAPER_WARNINGS_AS_ERRORS "Treat compiler warnings as errors" TRUE)
+set_project_warnings(project_warnings ${KAPER_WARNINGS_AS_ERRORS})
 enable_sanitizers(project_options)
 
 FetchContent_Declare(SFML
